# compagnon-de-jardin

./: .env.example  .gitignore  CAHIER_DES_CHARGES.md  CONTEXTE.md  MANIFESTE.md  Makefile  QUESTIONS_OUVERTES.md  README.md  pyproject.toml
docs/: architecture.md  decisions.md
src/: config.py  main.py  templating.py
src/db/: connection.py  schema.sql
src/modules/01_journal/: models.py  routes.py
src/modules/02_connaissances/: models.py  routes.py  wikipedia.py
src/modules/03_planification/: models.py  routes.py
src/static/: manifest.json  style.css
src/templates/: base.html  index.html
src/templates/connaissances/: index.html
src/templates/connaissances/partials/: search_results.html  variete_detail.html  variete_form.html  varietes_list.html  wiki_detail.html
src/templates/journal/: index.html
src/templates/journal/partials/: intervention_form.html  intervention_list.html  observation_form.html  observation_list.html  parcelle_form.html  parcelle_list.html
src/templates/planification/: index.html
src/templates/planification/partials/: calendrier.html  culture_form.html  parcelles_plan.html  rotations.html
tests/: conftest.py
