[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compagnon-de-jardin"
version = "0.1.0"
description = "Système hybride d'accompagnement au potager nourricier"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "BRS"}
]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "jinja2>=3.1,<4",
    "python-dotenv>=1.0,<2",
    "httpx>=0.28,<1",
    "openai>=1.58,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "black>=24,<25",
    "isort>=5,<6",
    "httpie>=3,<4",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
